# marketplace-flow-template

demo_flow/: README.md  pyproject.toml
seo_audit_flow/: .env.example  README.md  pyproject.toml
seo_audit_flow/src/seo_audit_flow/: main.py
seo_audit_flow/src/seo_audit_flow/crews/seo_crew/: seo_crew.py
seo_audit_flow/src/seo_audit_flow/crews/seo_crew/config/: agents.yaml  tasks.yaml
