[project]
name = "seo_audit_flow"
version = "0.1.0"
description = "SEO Audit Flow for analyzing single webpages using CrewAI"
authors = [{ name = "Javier Altez", email = "jaltez1@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = ["crewai[tools]>=0.108.0,<1.0.0", "boto3>=1.35.0,<2.0.0"]

[project.scripts]
kickoff = "seo_audit_flow.main:kickoff"
plot = "seo_audit_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
